--- a/www/src/components/Cobalt.astro
+++ b/www/src/components/Cobalt.astro
@@ -3,10 +3,10 @@
 
   .box {
     align-items: flex-end;
-    border: 4px solid $color__white;
+    border: 4px solid currentColor;
     display: flex;
-    font-size: 32pt;
-    font-weight: 600;
+    font-size: 28pt;
+    font-weight: 550;
     height: 5em;
     justify-content: flex-end;
     line-height: 0.8;
