--- a/www/src/styles/_utils.scss
+++ b/www/src/styles/_utils.scss
@@ -1,7 +1,7 @@
 .wrapper {
   margin-left: auto;
   margin-right: auto;
-  max-width: 75em;
+  max-width: 75rem;
   padding-left: 2rem;
   padding-right: 2rem;
   width: 100%;
