--- a/www/src/components/CobaltSm.astro
+++ b/www/src/components/CobaltSm.astro
@@ -3,15 +3,15 @@
 
   .box {
     align-items: flex-end;
-    border: 2px solid $color__white;
+    border: 2px solid currentColor;
     display: flex;
-    font-size: 1.25rem;
+    font-size: 1rem;
     font-weight: 500;
     line-height: 0.8;
-    height: 3rem;
+    height: 2.5rem;
     justify-content: flex-end;
     padding: 0.2em;
-    width: 3rem;
+    width: 2.5rem;
   }
 </style>
 
