Add Figma support

--- a/www/src/pages/index.astro
+++ b/www/src/pages/index.astro
@@ -107,10 +107,6 @@ import SkipToMain from '../components/SkipToMain.astro'
         }
       }
 
-      .actions-title {
-        margin-bottom: 0;
-      }
-
       .actions {
         align-items: flex-start;
         display: flex;
@@ -143,12 +139,16 @@ import SkipToMain from '../components/SkipToMain.astro'
             width: 1.75rem;
           }
         }
+
+        &-title {
+          margin-bottom: 0;
+        }
       }
 
       .docs {
         display: grid;
         grid-template-columns: min-content auto;
-        padding-right: 8rem;
+        padding-right: 9.5rem;
       }
 
       #main {
