--- a/www/src/styles/_utils.scss
+++ b/www/src/styles/_utils.scss
@@ -1,10 +1,10 @@
 .wrapper {
   margin-left: auto;
   margin-right: auto;
-  max-width: 75rem;
+  max-width: 100%;
   padding-left: 2rem;
   padding-right: 2rem;
-  width: 100%;
+  width: 65rem;
 }
 
 .tac { text-align: center; }
