--- a/www/src/styles/_fonts.scss
+++ b/www/src/styles/_fonts.scss
@@ -4,5 +4,5 @@
 @font-face {
   font-family: $type__family__neue_montreal;
   font-weight: 1 999;
-  src: url('/fonts/NeueMontreal-Variable.ttf') format('truetype');
+  src: url('https://drewhost.s3.amazonaws.com/PPNeueMontrealVariable.ttf') format('truetype');
 }
