--- a/www/src/pages/index.astro
+++ b/www/src/pages/index.astro
@@ -170,31 +170,31 @@ import SkipToMain from '../components/SkipToMain.astro'
           <section>
             <h2>What is Cobalt?</h2>
             <p>
-              <strong>Cobalt is not a design system.</strong> Cobalt has no
-              out-of-the-box colors, typography, or symbology. All that is for you
-              to define.
+              <strong>Cobalt is not a premade design system.</strong> If you’re
+              looking for a template, try <a href="https://material.io/design"
+              target="_blank">Material Design</a> or one of the dozens of
+              prebuilt libraries.
             </p>
             <p>
-              <strong>Cobalt is token management.</strong> It lets you organize
-              and categorize your tokens in a way that makes sense to you. It
-              starts with <a href="/docs/schema">tokens.yaml</a>, a standard
-              format for storage.  From your custom design tokens schema you can
-              use plugins to generate code from your design tokens, from
-              CSS/Sass to TypeScript/JavaScript to univeral JSON for backend
-              code and APIs.
+              <strong>Cobalt is token management for <em>your</em> design
+              system.</strong> For teams that don’t want to reinvent the wheel
+              building tooling to manage their design system and tokens, Cobalt
+              can help. Cobalt is an organization system that not only lets your
+              tokens and assets easy-to-find; it can generate code for your
+              project, too.
             </p>
             <div class="split">
               <div>
                 <p>
-                  Thinking about your product design in “layers,” Cobalt sits
-                  below your design system, and beneath your UI. You still control
-                  your tokens; Cobalt only provides “buckets“ to put them in.
+                  Cobalt sits below your design system, and beneath your UI.
+                  You still control your tokens; Cobalt only provides “buckets“
+                  to put them in.
                 </p>
                 <p>
                   In return you don’t have to build or manage custom software for
                   your design tokens like so many teams often do. And you still have
                   the flexibility to craft your design system in any way you’d like.
-                  Cobalt just bridges the gap between your tokens, and your design
+                  Cobalt just bridges the gap between your tokens and your design
                   system/UI.
                 </p>
               </div>
