--- a/www/src/components/Cobalt.astro
+++ b/www/src/components/Cobalt.astro
@@ -3,9 +3,9 @@
 
   .box {
     align-items: flex-end;
-    border: 4px solid currentColor;
+    border: 3px solid currentColor;
     display: flex;
-    font-size: 28pt;
+    font-size: 24px;
     font-weight: 550;
     height: 5em;
     justify-content: flex-end;
