Add image fetching from Figma

--- a/www/src/components/DocsNav.astro
+++ b/www/src/components/DocsNav.astro
@@ -28,14 +28,14 @@ function showSubPage(url) {
 }
 
 .a {
-  color: $color__black;
+  color: $color__Black;
   display: flex;
   padding: 0.5rem 1rem;
   position: relative;
   text-decoration: none;
 
   &::before {
-    background-color: $color__black;
+    background-color: $color__Black;
     border-radius: 50%;
     content: '';
     display: none;
