--- a/www/src/pages/index.astro
+++ b/www/src/pages/index.astro
@@ -47,9 +47,9 @@ import SkipToMain from '../components/SkipToMain.astro'
 
       .visual {
         align-self: start;
-        background-color: $color__blue;
+        background-color: $color__Blue;
         border-radius: 3rem;
-        color: $color__white;
+        color: $color__White;
         font-size: 18pt;
         font-weight: 500;
         position: relative;
@@ -62,7 +62,7 @@ import SkipToMain from '../components/SkipToMain.astro'
         }
 
         &-layer {
-          border-bottom: 1px dashed $color__white;
+          border-bottom: 1px dashed $color__White;
           margin-bottom: 2rem;
           padding-bottom: 2rem;
         }
@@ -115,7 +115,7 @@ import SkipToMain from '../components/SkipToMain.astro'
         position: relative;
 
         &::after {
-          border-right: 1px dashed $color__white;
+          border-right: 1px dashed $color__White;
           content: "";
           display: block;
           height: calc(100% - 2.5rem);
@@ -129,7 +129,7 @@ import SkipToMain from '../components/SkipToMain.astro'
           position: relative;
 
           &::before {
-            border-top: 1px dashed $color__white;
+            border-top: 1px dashed $color__White;
             content: "";
             display: block;
             position: absolute;
