--- a/www/src/styles/_base.scss
+++ b/www/src/styles/_base.scss
@@ -7,7 +7,7 @@ body {
 }
 
 html {
-  background-color: $color__blue;
+  background-color: $color__Blue;
 }
 
 * {
@@ -15,8 +15,8 @@ html {
 }
 
 body {
-  background-color: $color__white;
-  color: $color__black;
+  background-color: $color__White;
+  color: $color__Black;
   font-family: '#{$type__family__neue_montreal}', -system-ui, 'Helvetica', sans-serif;
   line-height: 1;
 }
@@ -54,7 +54,7 @@ i {
 }
 
 a {
-  color: $color__blue;
+  color: $color__Blue;
 }
 
 p {
