--- a/www/src/styles/_prism.scss
+++ b/www/src/styles/_prism.scss
@@ -5,28 +5,28 @@
 .language-js,
 .language-ts {
   .comment {
-    color: color.scale($color: $color__blue, $lightness: 30%, $saturation: -50%);
+    color: color.scale($color: $color__Blue, $lightness: 30%, $saturation: -50%);
   }
 }
 
 .language-diff {
   .deleted {
-    color: color.scale($color: $color__red, $lightness: 25%);
+    color: color.scale($color: $color__Red, $lightness: 25%);
   }
 
   .inserted {
-    color: $color__green;
+    color: $color__Green;
   }
 }
 
 .language-js {
   .keyword {
-    color: color.scale($color: $color__blue, $lightness: 50%, $saturation: 100%);
+    color: color.scale($color: $color__Blue, $lightness: 50%, $saturation: 100%);
   }
 }
 
 .language-yaml {
   .atrule {
-    color: color.scale($color: $color__blue, $lightness: 50%, $saturation: 100%);
+    color: color.scale($color: $color__Blue, $lightness: 50%, $saturation: 100%);
   }
 }
