--- a/www/src/styles/_utils.scss
+++ b/www/src/styles/_utils.scss
@@ -9,3 +9,19 @@
 
 .tac { text-align: center; }
 .tar { text-align: right; }
+
+.yt-embed {
+  height: 0;
+  padding-top: 56.25%;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+
+  iframe {
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+  }
+}
