Add Typography, Gradient, Shadow types, improve tests

--- a/www/src/styles/_base.scss
+++ b/www/src/styles/_base.scss
@@ -50,7 +50,8 @@ h6 {
 
 em,
 i {
-  font-variation-settings: 'ital' 900; // needed for variable font
+  font-variation-settings: 'ital' 900;
+  font-style: normal;
 }
 
 a {
